Fix spacing between my menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ body {
     font-size:200%;
     color:white;
     letter-spacing: 2px;
+    margin-right:20px;
     
 }
 #menu a:hover {
@@ -31,6 +32,7 @@ body {
 #menu li {
     float:right;
     list-style-type:none;
+    margin-right: 20px;
 }
 
 #yoga-intro {
